crates/ir/tests/snapshots/lower_test__stdlib__hash_deriving.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__hash_deriving

struct Point { x: Int, y: Int }
instance core/hash.Hash[Point] { hash=Hash$$Point$$hash }
instance core/eq.Eq[Point] { eq=Eq$$Point$$eq }
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (m) -> Unit

fn main() -> Unit =
  let v0: ~Point = construct Point(1, 2)
  let v1: ~Point = construct Point(1, 2)
  let v2: ~Point = construct Point(3, 4)
  let_join v31(v19: Unit) =
    let_join v30(v28: Bool) =
      let v20: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
      let v29: Unit = call println(v20, v28)
      v29
    in
    let v21: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
    let v22: Dict[core/hash.Hash, Point] = get_dict core/hash.Hash[Point]
    let v23: Int = trait_call core/hash.Hash.hash(v22, v0)
    let v24: Dict[core/hash.Hash, Point] = get_dict core/hash.Hash[Point]
    let v25: Int = trait_call core/hash.Hash.hash(v24, v2)
    let v26: Bool = trait_call core/eq.Eq.eq(v21, v23, v25)
    let v27: Bool = not(v26)
    jump v30(v27)
  in
  let_join v18(v16: Bool) =
    let v9: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v17: Unit = call println(v9, v16)
    jump v31(v17)
  in
  let v10: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v11: Dict[core/hash.Hash, Point] = get_dict core/hash.Hash[Point]
  let v12: Int = trait_call core/hash.Hash.hash(v11, v0)
  let v13: Dict[core/hash.Hash, Point] = get_dict core/hash.Hash[Point]
  let v14: Int = trait_call core/hash.Hash.hash(v13, v1)
  let v15: Bool = trait_call core/eq.Eq.eq(v10, v12, v14)
  jump v18(v15)

fn Hash$$Point$$hash(v32: Point) -> Int =
  let v33: Int = project v32.0
  let v34: Dict[core/hash.Hash, Int] = get_dict core/hash.Hash[Int]
  let v35: Int = trait_call core/hash.Hash.hash(v34, v33)
  let v36: Int = mul_int(31, v35)
  let v37: Int = project v32.1
  let v38: Dict[core/hash.Hash, Int] = get_dict core/hash.Hash[Int]
  let v39: Int = trait_call core/hash.Hash.hash(v38, v37)
  let v40: Int = add_int(v36, v39)
  v40

fn Eq$$Point$$eq(v41: Point, v42: Point) -> Bool =
  let_join v54(v47: Bool) =
    if v47 {
      let_join v53(v52: Bool) =
        if v52 {
          true
        } else {
          false
        }
      in
      let v48: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
      let v49: Int = project v41.1
      let v50: Int = project v42.1
      let v51: Bool = trait_call core/eq.Eq.eq(v48, v49, v50)
      jump v53(v51)
    } else {
      false
    }
  in
  let v43: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v44: Int = project v41.0
  let v45: Int = project v42.0
  let v46: Bool = trait_call core/eq.Eq.eq(v43, v44, v45)
  jump v54(v46)
